# os

lab1/lin/: CMakeLists.txt  main  main.cpp  readme.txt
lab1/lin/num/: Number.cpp  Number.h  main  main.cpp
lab1/lin/src/: CMakeLists.txt  Number.cpp  Number.h  Vector.cpp  Vector.h  main.cpp
lab1/lin/vec/: Vector.cpp  Vector.h
lab1/win/Project1/: Project1.sln
lab1/win/Project1/Project1/: Project1.vcxproj  main.cpp
lab1/win/Project1/Project1/x64/Debug/: Project1.exe.recipe  Project1.ilk  vc143.idb
lab1/win/Project1/Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
lab1/win/Project1/StaticLib/: Number.cpp  Number.h  StaticLib.vcxproj
lab1/win/Project1/StaticLib/x64/Debug/StaticLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  StaticLib.lastbuildstate
lab1/win/Project1/dynaLib/: Vector.cpp  Vector.h  dynaLib.vcxproj
lab1/win/Project1/dynaLib/x64/Debug/: dynaLib.dll.recipe  dynaLib.ilk  vc143.idb
lab1/win/Project1/dynaLib/x64/Debug/dynaLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  (+5 more)
lab1/win/Project1/x64/Debug/: StaticLib.idb  StaticLib.lib  dynaLib.exp  dynaLib.lib
lab2/: CMakeLists.txt
lab2/common/: CMakeLists.txt
lab2/common/src/: main.cpp
lab2/lin/src/: temp.cpp
lab2/src/: main.cpp
lab2/win/: CMakeLists.txt
lab2/win/src/: main.cpp
lab3/: CMakeLists.txt
lab3/src/: buffered_channel.h  main.cpp
